# kalk

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  config-kcalc.h.cmake  org.kde.kalk.appdata.xml  org.kde.kalk.desktop  org.kde.kalk.json  snapcraft.yaml
.reuse/: dep5
android/: AndroidManifest.xml  build.gradle  version.gradle.in
android/res/drawable/: splash.xml
autotests/: CMakeLists.txt  inputmanagertest.cpp
cmake/modules/: FindGMP.cmake  FindMPFR.cmake
knumber/: CMakeLists.txt  knumber.cpp  knumber.h  knumber_base.h  knumber_binary_wrapper.cpp  knumber_binary_wrapper.h  knumber_error.cpp  knumber_error.h  knumber_float.cpp  knumber_float.h  knumber_fraction.cpp  knumber_fraction.h  knumber_integer.cpp  knumber_integer.h  knumber_operators.cpp  knumber_operators.h
knumber/tests/: CMakeLists.txt  knumbertest.cpp
po/ar/: kalk.po
po/ast/: kalk.po
po/az/: kalk.po
po/ca/: kalk.po
po/ca@valencia/: kalk.po
po/cs/: kalk.po
po/da/: kalk.po
po/de/: kalk.po
po/el/: kalk.po
po/en_GB/: kalk.po
po/eo/: kalk.po
po/es/: kalk.po
po/eu/: kalk.po
po/fa/: kalk.po
po/fi/: kalk.po
po/fr/: kalk.po
po/ga/: kalk.po
po/gl/: kalk.po
po/he/: kalk.po
po/hi/: kalk.po
po/hu/: kalk.po
po/ia/: kalk.po
po/it/: kalk.po
po/ja/: kalk.po
po/ka/: kalk.po
po/ko/: kalk.po
po/lt/: kalk.po
po/lv/: kalk.po
po/nl/: kalk.po
po/nn/: kalk.po
po/pa/: kalk.po
po/pl/: kalk.po
po/pt/: kalk.po
po/pt_BR/: kalk.po
po/ru/: kalk.po
po/sa/: kalk.po
po/sk/: kalk.po
po/sl/: kalk.po
po/sv/: kalk.po
po/tr/: kalk.po
po/ug/: kalk.po
po/uk/: kalk.po
po/x-test/: kalk.po
po/zh_CN/: kalk.po
po/zh_TW/: kalk.po
src/: CMakeLists.txt  Messages.sh  calculator.qrc  historymanager.cpp  historymanager.h  inputmanager.cpp  inputmanager.h  kalkconfig.kcfg  kalkconfig.kcfgc  main.cpp  mathengine.cpp  mathengine.h  qalculateengine.cpp  qalculateengine.h  typemodel.cpp  typemodel.h  unitmodel.cpp  unitmodel.h
src/mathengine/: driver.cc  driver.hh  parser.yy  scanner.ll
src/qml/: AboutPage.qml  BinaryCalculator.qml  BinaryPad.qml  CalculationPage.qml  FunctionPad.qml  HistoryView.qml  LandScapePad.qml  Main.qml  NumberButton.qml  NumberPad.qml  PortraitPad.qml  SettingsPage.qml  SidebarButton.qml  UnitConversion.qml  UnitConverter.qml  UnitTypeGrid.qml  main.qml
